# word-rarity-classifier

./: AGENTS.md  ITERATION_LOG.md  LESSONS_LEARNED.md  LICENSE  README.md  pyproject.toml
.claude/agents/: agent-creator.md  architect.md  planner.md
docs/: HANDOVER.md  LESSONS_LEARNED.md  ONBOARDING.md  PIPELINE_DESIGN.md  RUNBOOK.md  rarity-anchor-l1-ro.txt
prompts/: rebalance_system_prompt_ro.txt  rebalance_user_prompt_template_ro.txt  system_prompt_ro.txt  user_prompt_template_ro.txt
src/classificator/: __init__.py  batch_size_adapter.py  cli.py  constants.py  csv_codec.py  distribution.py  fuzzy_word_matcher.py  json_repair.py  lock_manager.py  models.py  run_csv_repository.py  step2_metrics.py  support.py  transitions.py  upload_marker_writer.py  word_store.py
src/classificator/lm/: __init__.py  client.py  model_profiles.py  request_builder.py  response_parser.py
src/classificator/steps/: step1_export.py  step2_score.py  step3_compare.py  step4_upload.py  step5_rebalance.py
src/classificator/tools/: __init__.py  build_retry_input.py  chain_rebalance_target_dist.py  quality_audit.py  rarity_distribution.py  review_low_confidence.py
tests/: test_build_retry_input.py  test_quality_audit.py  test_rarity_distribution.py  test_response_parser.py  test_review_low_confidence.py  test_run_csv_repository.py  test_step5_progress_logging.py  test_transitions.py  test_word_store.py
