[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "classificator"
version = "0.1.0"
description = "Standalone Romanian lexical rarity classification pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.32.0",
  "psycopg[binary]>=3.2.0",
]

[project.optional-dependencies]
dev = []

[project.scripts]
classificator = "classificator.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
